<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Create">

    <TextView
        android:id="@+id/tmb_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="120dp"
        android:text="@string/tambah_barang"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/edt_namabarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_nama_barang"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        />
    <EditText
        android:id="@+id/edt_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_harga_barang"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/edt_namacustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_nama_customer"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/edt_tglbeli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/tanggal_beli"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tambah"
        android:textSize="18sp" />

</LinearLayout>