<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"

    >

    <LinearLayout
        android:id="@+id/card_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Barang: "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nama_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_barang"
                android:textSize="18sp"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Harga Barang: "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/harga_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_barang"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Customer: "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nama_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_customer"
                android:textSize="18sp"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tanggal Beli: "
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tgl_beli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_beli"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>